# AndroidAdvanceLearn

./: .gitgnore  README.md
0_readyClass/: README.md
0_readyClass/1_QRcode/app/: build.gradle
0_readyClass/1_QRcode/gradle/wrapper/: gradle-wrapper.properties
0_readyClass/2_面试/: 面试技巧.md
0_readyClass/3_ android开机启动流程/: android开机启动流程.md
1_ui/: README.md
1_ui/0_ui_core/: README.md
1_ui/0_ui_core/1_drawing_flow/: 1_ui绘制流程及原理.md  1_ui绘制流程（测量，布局绘制）.md
1_ui/0_ui_core/2_paint/1_paint/: .gitignore  1_paint画笔高级应用.md  README.md
1_ui/0_ui_core/2_paint/2_canvas/: README.md
1_ui/0_ui_core/2_paint/3_path_bezier/: README.md
1_ui/0_ui_core/2_paint/4_pathMeasure/: README.md
1_ui/0_ui_core/2_paint/5_matrixCamera/: README.md
1_ui/0_ui_core/3_touch/: README.md
1_ui/0_ui_core/3_touch/Event/: build.gradle
1_ui/0_ui_core/3_touch/app/: build.gradle
1_ui/0_ui_core/4_anim/: README.md
1_ui/0_ui_core/4_anim/app/: build.gradle
1_ui/0_ui_core/5_ adaptive/: README.md
1_ui/0_ui_core/5_ adaptive/app/: build.gradle
1_ui/1_ screen/: README.md
1_ui/1_ screen/app/: build.gradle
1_ui/2_ project/0_wangyiProject/: README.md
1_ui/2_ project/0_wangyiProject/app/: build.gradle
1_ui/2_ project/1_materialDesign/: README.md
1_ui/2_ project/1_materialDesign/app/: build.gradle
1_ui/2_ project/2_ customView/: README.md
1_ui/2_ project/2_ customView/app/: build.gradle
1_ui/2_ project/3_svg/: README.md
1_ui/2_ project/3_svg/app/: build.gradle
1_ui/2_ project/4_pathMeasure/app/: build.gradle
1_ui/2_ project/5_Vlayout/: README.md
1_ui/2_ project/5_Vlayout/app/: build.gradle
2_ndk/: README.md
2_ndk/1_c++基础/1_基础知识/: README.md
2_ndk/1_c++基础/1_基础知识/1_function/: fuc.h  main.c
2_ndk/1_c++基础/1_基础知识/4_Student/: CMakeLists.txt  main.c
2_ndk/1_c++基础/1_基础知识/5_union/: main.c
2_ndk/1_c++基础/2_c++基础进阶/: README.md
2_ndk/1_c++基础/2_c++基础进阶/1_类的构造/: CMakeLists.txt  main.cpp
2_ndk/1_c:c++基础/1_基础知识/1_function/: CMakeLists.txt  fuc.h
2_ndk/1_c:c++基础/1_基础知识/3_pointer/: CMakeLists.txt  main.c
2_ndk/1_c:c++基础/1_基础知识/5_union/: CMakeLists.txt
2_ndk/1_c:c++基础/2_c++基础进阶/1_类的构造/: Student.cpp  Student.h
2_ndk/2_编译原理与语法详解/1_makefile/: README.md
2_ndk/2_编译原理与语法详解/1_makefile语法详解/: README.md
2_ndk/2_编译原理与语法详解/2_shell语法详解/: README.md  demo.sh
2_ndk/2_编译原理与语法详解/3_Cmake详解/: README.md
2_ndk/3_项目实战/0_visualstudio环境搭建/: README.md
2_ndk/3_项目实战/1_一线互联网核心技术/: README.md
2_ndk/4_project/CBasics/: .gitignore
2_ndk/4_project/CBasics/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
2_ndk/4_project/CBasics/app/src/main/cpp/src/: comm_jni.cpp
2_ndk/4_project/player/: .gitignore  README.md  build.gradle
2_ndk/4_project/player/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
2_ndk/4_project/player/app/src/main/cpp/src/: comm_jni.cpp
2_ndk/4_project/player/app/src/main/cpp/src/module/: play_module.cpp  play_module.h
2_ndk/4_project/player/app/src/main/cpp/src/player/: player.cpp  player.h  player_listener.h
2_ndk/4_project/player/app/src/main/cpp/src/player/channel/: audio_channel.cpp  audio_channel.h  base_channel.h  video_channel.cpp  video_channel.h
2_ndk/4_project/player/app/src/main/cpp/src/player/opensl/: opensl.cpp  opensl.h
2_ndk/4_project/player/app/src/main/cpp/src/text/: ffmpeg_text.cpp  ffmpeg_text.h
2_ndk/4_project/player/app/src/main/cpp/src/utils/: jni_simple_type.h  macro.h  msg_queue.h  safe_queue.h
3_architect/: Retrofit分析.md  ok源码分析.md
3_architect/3_architect_project/Aop/: build.gradle  settings.gradle
3_architect/3_architect_project/CustomGlide/: .gitignore
3_architect/3_architect_project/androidos/: .gitignore  README.md  settings.gradle
3_architect/3_architect_project/skin/: .gitignore  README.md  settings.gradle
3_architect/3_architect_temper/CustomBinder/: settings.gradle
3_architect/3_architect_temper/CustomGlide/: README.md
3_architect/第一章 架构师入门/第一节 UML建模/: README.md
3_architect/第一章 架构师入门/第三节 无死角分析Android 系统源码/: README.md
3_architect/第一章 架构师入门/第二节 设计模式/: README.md
3_架构师/第一章 架构师入门/第一节 UML建模/: README.md
(+386 files in other folders)
